# local-mgrep

./: .gitignore  AGENTS.md  ANM  FEATURE.md  LICENSE  README.md  claude-code-source-build  pyproject.toml  pyproject.toml.bak  skylake-code  warp
.github/workflows/: pages.yml  release.yml  test.yml
.sc/: last-chat-settings.json
benchmarks/: agent_context_benchmark.py  agent_e2e_results.md  cascade_probe.py  cascade_production_bench.py  code_graph_probe.py  llm_arbitration_probe.py  multi_hyde_probe.py  multi_round_probe.py  parity_vs_mixedbread.py  parity_vs_ripgrep.py  token_savings.py  v0_5_diag_hard_misses.py  v0_5_repo_A_bench.py  v0_5_targeted_enrich.py  v0_5_warp_bench.py  v0_7_multilang_bench.py
docs/: README.md  index.html  local-mgrep-0.10.0.md  local-mgrep-0.11.0.md  local-mgrep-0.12.0.md  local-mgrep-0.12.1.md  local-mgrep-0.13.0.md  local-mgrep-0.14.0.md  local-mgrep-0.2.0.md  local-mgrep-0.3.0.md  local-mgrep-0.3.1.md  local-mgrep-0.4.0.md  local-mgrep-0.4.1.md  local-mgrep-0.5.0.md  local-mgrep-0.5.1.md  local-mgrep-0.6.0.md  local-mgrep-0.6.1.md  local-mgrep-0.6.2.md  local-mgrep-0.7.0.md  local-mgrep-0.8.0.md  local-mgrep-0.9.0.md  parity-benchmarks.md  roadmap.md  styles.css  token-benchmarking.md
local-mgrep/: pyproject.toml
local_mgrep/: __init__.py
local_mgrep/src/: __init__.py  (+18 more)
tests/: test_answer_mode.py  test_code_graph.py  test_enrich.py  test_filename_shortcut.py  test_hybrid_ranking.py  test_integrations.py  test_intent.py  test_lexical_shortcut.py  test_parity_batch.py  test_search_quality.py  test_symbol_index.py  test_v0_4_ux.py
(+13 files in other folders)
