[project]
name = "local-mgrep"
version = "0.8.0"
description = "Free local semantic code search using Ollama"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "click>=8.0",
    "requests>=2.31",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
]

[project.optional-dependencies]
rerank = [
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
mgrep = "local_mgrep.src.cli:main"

[project.urls]
Homepage = "https://github.com/danielchen26/local-mgrep"
Repository = "https://github.com/danielchen26/local-mgrep"
Issues = "https://github.com/danielchen26/local-mgrep/issues"
Documentation = "https://danielchen26.github.io/local-mgrep/"

[tool.setuptools.packages.find]
where = ["."]
include = ["local_mgrep*"]
